Lib update + minor refactoring + removing warnings + general UI fixes